src/app/vote/vote-info/vote-info.component.scss
@import "../../../styles.scss";

.container{
    left: 50%;
    position: absolute;
}

.text-container{
    max-width:720px;
    position: relative;
    left: -50%;
    background-color: white;
    padding: 20px 10px 10px 10px;
}

.text-container .title{
}

.link-container{
    margin-top: 25px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.background{
    display: flex;
    flex-wrap: wrap;
}

.background img{
    width: 10%;
    height: auto;
    display:block;
}

@media only screen and (max-width: 1200px){
    .background img{
        width: 20%;
    }
}

